# blue-fire-rando

./: .gitignore  Cargo.toml  README.md  build.rs  spoiler_log.txt
src/: actor.rs  io.rs  lib.rs  logic.rs  main.rs  map.rs  pak.bat  writing.rs
src/blueprints/: Hook.uasset  angel_hook.uasset  angel_hook.uexp  bremur_hook.uasset  bremur_hook.uexp  collectables.uexp  collectables.umap  collectibles.uexp  collectibles.umap  hook.uasset  hook.uexp  logo.uasset  logo.uexp  paulale_hook.uasset  paulale_hook.uexp  player_hook.uasset  player_hook.uexp
src/logic/: checks.rs  drops.rs  generation.rs  io.rs  locations.rs  map.rs  seed_gen.rs  seeding.rs  writing.rs
src/logic/writing/: cutscenes.rs  overworld.rs  savegames.rs  specific.rs
src/map/: delete.rs  duplicate.rs  transform.rs  transplant.rs
src/writing/: cutscenes.rs  overworld.rs  savegames.rs  specific.rs
