[package]
name = "blue-fire-rando"
description = "a program with the goal of shuffling around items within blue fire to create a new gameplay experience"
repository = "https://github.com/bananaturtlesandwich/blue-fire-rando"
version = "0.1.0"
authors = ["spuds"]
edition = "2021"

[dependencies]
eframe = { version = "*", features = ["persistence"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", package = "unreal_asset" }
unpak = "*"
strum = { version = "*", features = ["derive"] }
rand = "*"
hashbrown = "*"
lazy_static = "*"
egui-modal = "*"
rfd = "*"
thiserror = "*"

[build-dependencies]
winres = "*"

[profile.release]
panic = "abort"
