[package]
name = "blue-fire-rando"
description = "a gamemode for blue fire which shuffles pickups"
repository = "https://github.com/bananaturtlesandwich/blue-fire-rando"
version = "1.0.0"
authors = ["spuds"]
edition = "2021"

[dependencies]
eframe = { version = "0.21", features = ["persistence"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", package = "unreal_asset" }
unpak = { version = "1.0", default-features = false, features = ["asset-paths"] }
strum = { version = "0.24", features = ["derive"] }
rand = "0.8"
egui-modal = "0.2"
rfd = "0.11"
thiserror = "1.0"
autoupdater = "0.3"

[build-dependencies]
winres = "0.1"

[profile.release]
panic = "abort"
