[package]
name = "blue-fire-rando"
description = "a gamemode for blue fire which shuffles pickups"
repository = "https://github.com/bananaturtlesandwich/blue-fire-rando"
version = "1.1.5"
authors = ["spuds"]
edition = "2021"

[dependencies]
eframe = { version = "0.30", default-features = false, features = ["glow", "persistence"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", package = "unreal_asset", rev = "186842c"}
repak = { git = "https://github.com/trumank/repak", rev = "a749449", default-features = false }
strum = { version = "0.27", features = ["derive"] }
rand = "0.9"
egui-modal = "0.6"
rfd = "0.16"
thiserror = "2.0"
autoupdater = "0.3"

[build-dependencies]
winres = "0.1"

[profile.release]
panic = "abort"
